# genai_platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
examples/: quickstart_conversation.py  quickstart_models.py  quickstart_session_service.py  test_model_service.py  test_session_service.py
genai_platform/: __init__.py  platform.py  workflow.py
genai_platform/clients/: __init__.py  base.py  data.py  evaluation.py  guardrails.py  models.py  sessions.py  tools.py
proto/: __init__.py  generate.py  models.proto  models_pb2.py  models_pb2_grpc.py  sessions.proto  sessions_pb2.py  sessions_pb2_grpc.py
services/: __init__.py
services/gateway/: README.md  grpc_proxy.py  http_handler.py  main.py  registry.py  servers.py
services/models/: ARCHITECTURE.md  README.md  __init__.py  main.py  service.py  store.py
services/models/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
services/sessions/: README.md  __init__.py  main.py  service.py  store.py
services/shared/: README.md  __init__.py  server.py  servicer_base.py
